bugfix: View switch didn't work when context undefined overflow of labels fixed

--- a/src/components/RadioButtons.css
+++ b/src/components/RadioButtons.css
@@ -32,6 +32,9 @@
   padding: 5px 8px 4px 8px;
   height: 23px;
   margin: 2px;
+  overflow: hidden;
+  text-wrap: none;
+  text-overflow: ellipsis;
 }
 
 .buttonActive,
